# Campgames_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  check_mypy_deps.py  data.sql  database.db  database.py  database.sqlite  database.sqlite-journal  docker-compose.yml  etc.py  init.py  main.py  pyproject.black  pyproject.toml  requirements.txt  setup.sh  test.py  text.json  user.py
.circleci/: config.yml
.github/workflows/: python-app.yml
bot/: __main__.py  admin.py  admins.py  ask.py  commands.py  config.py  conv_handler.py  data.py  handlers.py  password.py
bot/database/: __init__.py  connection.py  models.py
bot/handlers/: __init__.py  admin.py  ask.py  handlers.py  utils.py
bot/utils/: __init__.py  spreadsheet.py  states_range.py  user_manager.py  utils.py
data/: text.json
requirements/: common.txt  database.txt  dev.txt
src/: __main__.py  admin.py  ask.py  conv_handler.py  database.py  etc.py  handlers.py  logs.py  models.py  states_range.py  user.py  user_manager.py  utils.py
src/database/: __init__.py  connection.py  models.py
src/utils/: __init__.py  spreadsheet.py  user_manager.py  utils.py
